samples/_failures_safe/1761147405_241190_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3db2d4de.c: In function ‘main’:
./samples/SAFE/__tmp_3db2d4de.c:138:5: error: expected declaration or statement at end of input
  138 |     switch (choice) {
      |     ^~~~~~
./samples/SAFE/__tmp_3db2d4de.c:138:5: error: expected declaration or statement at end of input
